[gd_scene load_steps=7 format=2]

[ext_resource path="res://Szenen/EG/page.tscn" type="PackedScene" id=1]
[ext_resource path="res://Szenen/EG/Inhaltsverzeichnis.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="page1" instance=ExtResource( 1 )]

[node name="Inhaltsverzeichnis" type="VBoxContainer" parent="." index="2"]
margin_left = 70.0
margin_top = 66.0
margin_right = 466.0
margin_bottom = 620.0
script = ExtResource( 2 )

[node name="Kapitel 1" type="Label" parent="Inhaltsverzeichnis" index="0"]
margin_right = 396.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Kapitel 1"
align = 1

[node name="elektrischerStromkreis" type="Label" parent="Inhaltsverzeichnis" index="1"]
margin_top = 29.0
margin_right = 396.0
margin_bottom = 50.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Der elektrische Stromkreis"

[node name="Kurzschluss" type="Label" parent="Inhaltsverzeichnis" index="2"]
margin_top = 54.0
margin_right = 396.0
margin_bottom = 75.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Der Kurzschluss"
__meta__ = {
"_editor_description_": ""
}

[node name="Elektrizitaetsquellen" type="Label" parent="Inhaltsverzeichnis" index="3"]
margin_top = 79.0
margin_right = 396.0
margin_bottom = 100.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die Elektrizitätsquelle"
__meta__ = {
"_editor_description_": ""
}

[node name="Symbole" type="Label" parent="Inhaltsverzeichnis" index="4"]
margin_top = 104.0
margin_right = 396.0
margin_bottom = 125.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Symbole in elektrischen Stromkreisen"
__meta__ = {
"_editor_description_": ""
}

[node name="Kapitel 2" type="Label" parent="Inhaltsverzeichnis" index="5"]
margin_top = 129.0
margin_right = 396.0
margin_bottom = 154.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Kapitel 2"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Stromstaerke" type="Label" parent="Inhaltsverzeichnis" index="6"]
margin_top = 158.0
margin_right = 396.0
margin_bottom = 179.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die elektrische Stromstärke"
__meta__ = {
"_editor_description_": ""
}

[node name="Amperemeter" type="Label" parent="Inhaltsverzeichnis" index="7"]
margin_top = 183.0
margin_right = 396.0
margin_bottom = 204.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Das Amperemeter"
__meta__ = {
"_editor_description_": ""
}

[node name="Reihenschaltung" type="Label" parent="Inhaltsverzeichnis" index="8"]
margin_top = 208.0
margin_right = 396.0
margin_bottom = 229.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die Reihenschaltung"
__meta__ = {
"_editor_description_": ""
}

[node name="Kapitel 3" type="Label" parent="Inhaltsverzeichnis" index="9"]
margin_top = 233.0
margin_right = 396.0
margin_bottom = 258.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Kapitel 3"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Potenzial" type="Label" parent="Inhaltsverzeichnis" index="10"]
margin_top = 262.0
margin_right = 396.0
margin_bottom = 283.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Das elektrische Potenzial"
__meta__ = {
"_editor_description_": ""
}

[node name="Spannung" type="Label" parent="Inhaltsverzeichnis" index="11"]
margin_top = 287.0
margin_right = 396.0
margin_bottom = 308.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die elektrische Spannung"
__meta__ = {
"_editor_description_": ""
}

[node name="Voltmeter" type="Label" parent="Inhaltsverzeichnis" index="12"]
margin_top = 312.0
margin_right = 396.0
margin_bottom = 333.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Das Voltmeter"
__meta__ = {
"_editor_description_": ""
}

[node name="Parallelschaltungen" type="Label" parent="Inhaltsverzeichnis" index="13"]
margin_top = 337.0
margin_right = 396.0
margin_bottom = 358.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Parallelschaltungen"
__meta__ = {
"_editor_description_": ""
}

[node name="Kapitel 4" type="Label" parent="Inhaltsverzeichnis" index="14"]
margin_top = 362.0
margin_right = 396.0
margin_bottom = 387.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Kapitel 4"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Mschenregel" type="Label" parent="Inhaltsverzeichnis" index="15"]
margin_top = 391.0
margin_right = 396.0
margin_bottom = 412.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die Maschenregel"
__meta__ = {
"_editor_description_": ""
}

[node name="Knotenregel" type="Label" parent="Inhaltsverzeichnis" index="16"]
margin_top = 416.0
margin_right = 396.0
margin_bottom = 437.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Die Knotenregel"
__meta__ = {
"_editor_description_": ""
}

[node name="Titel" parent="." index="4"]
text = "Inhaltsverzeichnis"

[node name="Label" parent="." index="5"]
visible = false

[node name="AnimatedSprite" parent="." index="6"]
visible = false

[node name="Bildunterschrift" parent="." index="7"]
visible = false
margin_left = 76.0
margin_top = 60.0
margin_right = 399.0
margin_bottom = 147.0
text = "Der elektrische Stromkrei"

[node name="Sprite" parent="." index="8"]
visible = false

[connection signal="gui_input" from="Inhaltsverzeichnis/elektrischerStromkreis" to="Inhaltsverzeichnis" method="_on_elektrischerStromkreis_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/elektrischerStromkreis" to="Inhaltsverzeichnis" method="_on_elektrischerStromkreis_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/elektrischerStromkreis" to="Inhaltsverzeichnis" method="_on_elektrischerStromkreis_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Kurzschluss" to="Inhaltsverzeichnis" method="_on_Kurzschluss_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Kurzschluss" to="Inhaltsverzeichnis" method="_on_Kurzschluss_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Kurzschluss" to="Inhaltsverzeichnis" method="_on_Kurzschluss_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Elektrizitaetsquellen" to="Inhaltsverzeichnis" method="_on_Elektrizitaetsquellen_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Elektrizitaetsquellen" to="Inhaltsverzeichnis" method="_on_Elektrizitaetsquellen_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Elektrizitaetsquellen" to="Inhaltsverzeichnis" method="_on_Elektrizitaetsquellen_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Symbole" to="Inhaltsverzeichnis" method="_on_Symbole_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Symbole" to="Inhaltsverzeichnis" method="_on_Symbole_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Symbole" to="Inhaltsverzeichnis" method="_on_Symbole_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Stromstaerke" to="Inhaltsverzeichnis" method="_on_Stromstaerke_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Stromstaerke" to="Inhaltsverzeichnis" method="_on_Stromstaerke_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Stromstaerke" to="Inhaltsverzeichnis" method="_on_Stromstaerke_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Amperemeter" to="Inhaltsverzeichnis" method="_on_Amperemeter_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Amperemeter" to="Inhaltsverzeichnis" method="_on_Amperemeter_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Amperemeter" to="Inhaltsverzeichnis" method="_on_Amperemeter_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Reihenschaltung" to="Inhaltsverzeichnis" method="_on_Reihenschaltung_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Reihenschaltung" to="Inhaltsverzeichnis" method="_on_Reihenschaltung_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Reihenschaltung" to="Inhaltsverzeichnis" method="_on_Reihenschaltung_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Potenzial" to="Inhaltsverzeichnis" method="_on_Potenzial_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Potenzial" to="Inhaltsverzeichnis" method="_on_Potenzial_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Potenzial" to="Inhaltsverzeichnis" method="_on_Potenzial_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Spannung" to="Inhaltsverzeichnis" method="_on_Spannung_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Spannung" to="Inhaltsverzeichnis" method="_on_Spannung_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Spannung" to="Inhaltsverzeichnis" method="_on_Spannung_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Voltmeter" to="Inhaltsverzeichnis" method="_on_Voltmeter_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Voltmeter" to="Inhaltsverzeichnis" method="_on_Voltmeter_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Voltmeter" to="Inhaltsverzeichnis" method="_on_Voltmeter_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Parallelschaltungen" to="Inhaltsverzeichnis" method="_on_Parallelschaltungen_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Parallelschaltungen" to="Inhaltsverzeichnis" method="_on_Parallelschaltungen_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Parallelschaltungen" to="Inhaltsverzeichnis" method="_on_Parallelschaltungen_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Mschenregel" to="Inhaltsverzeichnis" method="_on_Mschenregel_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Mschenregel" to="Inhaltsverzeichnis" method="_on_Mschenregel_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Mschenregel" to="Inhaltsverzeichnis" method="_on_Mschenregel_mouse_exited"]
[connection signal="gui_input" from="Inhaltsverzeichnis/Knotenregel" to="Inhaltsverzeichnis" method="_on_Knotenregel_gui_input"]
[connection signal="mouse_entered" from="Inhaltsverzeichnis/Knotenregel" to="Inhaltsverzeichnis" method="_on_Knotenregel_mouse_entered"]
[connection signal="mouse_exited" from="Inhaltsverzeichnis/Knotenregel" to="Inhaltsverzeichnis" method="_on_Knotenregel_mouse_exited"]
